Issue 1 : Displaying some extra space between "Got a question about a custom Contact Form7 to WP E-Sign workflow?" and "Ask your question?" butto

--- a/admin/about/assets/css/esig-about.css
+++ b/admin/about/assets/css/esig-about.css
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue","Source Sans Pro",sans-serif !important;
   background: #f1f1f1;
   line-height: 1.2;
   color: #000000;
